text. fix process line spacing

--- a/src/assets/css/processSection.css
+++ b/src/assets/css/processSection.css
@@ -55,7 +55,7 @@
 }
 .theProcess li {
   font-size: 1em;
-  margin: .6em 0em;
+  margin: .4em 0em;
   font-family: var(--brand-font);
   font-weight: 300;
 }
